{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 66,
  "lineage": "fe616e26-cde8-6344-1cab-e0c6665e93ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127680565226:vpc/vpc-0cbf4d5bd8930bc20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-02eb359c70a709f1e",
            "default_route_table_id": "rtb-012e7b08e37b5d66c",
            "default_security_group_id": "sg-0d91deb0b3d81f131",
            "dhcp_options_id": "dopt-0dc7efd7644fe02ee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cbf4d5bd8930bc20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012e7b08e37b5d66c",
            "owner_id": "127680565226"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:127680565226:loadbalancer/elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-1871915403.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "instances": [
              "i-069c4e0aadd80d7bf",
              "i-095c42a86cbe4de7b",
              "i-0b2a3097ec5dbda1a",
              "i-0cda59ec95533a7e5",
              "i-0f2ba6c474ed8c0b1",
              "i-0f2dca1c76f8d11c3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-023444ef61fbc9277"
            ],
            "source_security_group": "127680565226/elb_sg",
            "source_security_group_id": "sg-023444ef61fbc9277",
            "subnets": [
              "subnet-02e168396355ea485",
              "subnet-034eda8166aad9e7a",
              "subnet-04025a05cb69d8446",
              "subnet-0549160272ef1707d",
              "subnet-05ff0ff2db62ebf3f",
              "subnet-06cff642cde85d955"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.http_servers",
            "aws_security_group.elb_sg",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-02e168396355ea485",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:127680565226:instance/i-0f2dca1c76f8d11c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2dca1c76f8d11c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ausc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093892afa4ba20d1f",
            "private_dns": "ip-172-31-6-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.100",
            "public_dns": "ec2-34-205-246-156.compute-1.amazonaws.com",
            "public_ip": "34.205.246.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a41c3e583c457b71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e168396355ea485",
            "tags": {
              "name": "http_servers_subnet-02e168396355ea485"
            },
            "tags_all": {
              "name": "http_servers_subnet-02e168396355ea485"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb4345c3d207abbf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-034eda8166aad9e7a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:127680565226:instance/i-069c4e0aadd80d7bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069c4e0aadd80d7bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ausc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0504d14350d171f76",
            "private_dns": "ip-172-31-35-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.172",
            "public_dns": "ec2-54-211-48-165.compute-1.amazonaws.com",
            "public_ip": "54.211.48.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0053517e08e62d77b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034eda8166aad9e7a",
            "tags": {
              "name": "http_servers_subnet-034eda8166aad9e7a"
            },
            "tags_all": {
              "name": "http_servers_subnet-034eda8166aad9e7a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb4345c3d207abbf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-04025a05cb69d8446",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:127680565226:instance/i-0cda59ec95533a7e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cda59ec95533a7e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ausc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e08d0b9bb528b7af",
            "private_dns": "ip-172-31-72-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.72.107",
            "public_dns": "ec2-35-175-133-74.compute-1.amazonaws.com",
            "public_ip": "35.175.133.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09577e352900d31b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04025a05cb69d8446",
            "tags": {
              "name": "http_servers_subnet-04025a05cb69d8446"
            },
            "tags_all": {
              "name": "http_servers_subnet-04025a05cb69d8446"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb4345c3d207abbf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0549160272ef1707d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:127680565226:instance/i-0f2ba6c474ed8c0b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2ba6c474ed8c0b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ausc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc5483e1e46fd7b8",
            "private_dns": "ip-172-31-90-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.54",
            "public_dns": "ec2-44-208-32-36.compute-1.amazonaws.com",
            "public_ip": "44.208.32.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b332fe1ca6fe7dfb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0549160272ef1707d",
            "tags": {
              "name": "http_servers_subnet-0549160272ef1707d"
            },
            "tags_all": {
              "name": "http_servers_subnet-0549160272ef1707d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb4345c3d207abbf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-05ff0ff2db62ebf3f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:127680565226:instance/i-0b2a3097ec5dbda1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2a3097ec5dbda1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ausc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08054aeab738df4c8",
            "private_dns": "ip-172-31-18-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.124",
            "public_dns": "ec2-54-83-69-221.compute-1.amazonaws.com",
            "public_ip": "54.83.69.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc452bb5ef5c301f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ff0ff2db62ebf3f",
            "tags": {
              "name": "http_servers_subnet-05ff0ff2db62ebf3f"
            },
            "tags_all": {
              "name": "http_servers_subnet-05ff0ff2db62ebf3f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb4345c3d207abbf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-06cff642cde85d955",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe472d8a85bc7b0e",
            "arn": "arn:aws:ec2:us-east-1:127680565226:instance/i-095c42a86cbe4de7b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095c42a86cbe4de7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ausc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b49033741e6977c9",
            "private_dns": "ip-172-31-55-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.55.251",
            "public_dns": "ec2-52-3-245-211.compute-1.amazonaws.com",
            "public_ip": "52.3.245.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0977160191a31015c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cff642cde85d955",
            "tags": {
              "name": "http_servers_subnet-06cff642cde85d955"
            },
            "tags_all": {
              "name": "http_servers_subnet-06cff642cde85d955"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb4345c3d207abbf"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127680565226:security-group/sg-023444ef61fbc9277",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023444ef61fbc9277",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "127680565226",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "elb_sg_bk"
            },
            "tags_all": {
              "name": "elb_sg_bk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbf4d5bd8930bc20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127680565226:security-group/sg-0cb4345c3d207abbf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb4345c3d207abbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_server_sg",
            "name_prefix": "",
            "owner_id": "127680565226",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "http_server_sg"
            },
            "tags_all": {
              "name": "http_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbf4d5bd8930bc20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}